--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -10,6 +10,7 @@
 
 <body>
 
+    {% include 'global/partials/menu.html' %}
     {% include 'global/partials/header.html' %}
     {% include 'global/partials/search.html' %}
 
